correcting style trough ui-bootrstrap

--- a/MisPagos2/static/ng/pagos-list/pagos-list.template.html
+++ b/MisPagos2/static/ng/pagos-list/pagos-list.template.html
@@ -1,12 +1,35 @@
-<table class="table table-striped">
-	<tr>
-		<th>Name</th>
-		<th>Value</th>
-		<th>Month</th>
-	</tr>
-	<tr ng-repeat="pago in $ctrl.pagos">
-		<th>{{ pago.name }}</th>
-		<th>{{ pago.value }}</th>
-		<th>{{ pago.month }}</th>
-	</tr>	
-</table>
+<div class="container-fluid">
+  <div class="row">	
+    <div class="col-md-2">
+      <!--Sidebar content-->
+
+      Search: <input ng-model="$ctrl.query" />
+
+	</div>	
+	
+    <div class="col-md-10">
+      <!--Body content-->
+		<table class="table table-striped">
+			<tr>
+				<th>Name</th>
+				<th>Value</th>
+				<th>Month</th>
+			</tr>
+			<tr ng-repeat="pago in $ctrl.pagos | filter:$ctrl.query">
+				<th>{{ pago.name }}</th>
+				<th>{{ pago.value }}</th>
+				<th>{{ pago.month }}</th>
+			</tr>	
+		</table>
+		
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
